Update content of research page.

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ html{
     font-size: 3.5em;
 }
 
+.exph2{
+    margin-top: 75px;
+    margin-bottom:50px;
+    font-size: 2.0em;
+}
+
 .listGroup{
 	margin: 15px auto;
 }
