--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,14 @@ html {
 }
 
 .exph1 {
-  margin-top: 75px;
-  margin-bottom: 75px;
+
+  font-size: 3em;
+  margin-bottom: 150px;
+}
+
+.researchH1 {
+  padding-top: 75px;
+  margin-bottom: 100px;
   font-size: 3em;
 }
 
@@ -75,15 +81,6 @@ html {
   margin-top: 25px;
 }
 
-.dalLogo {
-  margin-top: 70px;
-  margin-bottom: 70px;
-}
-
-.funsportsLogo {
-  margin-top: 80px;
-  margin-bottom: 70px;
-}
 .contact {
   width: 60%;
   margin: 0px auto;
@@ -95,7 +92,15 @@ html {
 }
 
 footer {
-  background-color: #ccd8e5;
+  /* background-color: #bbccf1; */
   font-size: 1.2rem;
   padding: 20px;
+  margin-top: 100px;
+}
+
+.jumbotron-g, .grad{
+  background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: white !important;
 }
